# DroneExperiments

./: .gitignore  README.md  leaderdrone_stable.param  requirements.txt  setup.sh
C3M/: main.py
C3M/configs/: config_navio2 small.py  config_navio2.py
C3M/models/: model_navio2.py  model_navio2_numpy.py  numpy_layers.py
C3M/systems/: system_navio2.py
ViconMavlink/: .gitignore  CMakeLists.txt  Drone.cpp  Drone.h  DroneState.h  LICENSE  README.md  Sender.cpp  Sender.h  SenderController.cpp  SenderController.h  SenderWindow.cpp  SenderWindow.h  SenderWindow.ui  Station.cpp  Station.h  StationController.cpp  StationController.h  StationWindow.cpp  StationWindow.h  StationWindow.ui  main.cpp
core/: constants.py
core/refs/: circular_traj.py  ellipsoid.py  ellipsoid_backup.py  fixed_point.py  gate_ref.py  gen_xref_uref_from_xyz.py  goto.py  landing.py  lem0.py  lem1.py  lem4.py  lemniscate.py  sinusoidal_y.py  traj_straightline.py  trajectory_3D.py
map/: aprilmav.py  aprilmav_2.py  countries.csv  geo_test_results.csv  initializer.py  main_map.py  map.py  mavlink_commands_vision.txt  plot_2d.py  test_log.txt  testing.py  testing4euler.py  tmptest.py
map/lib/: geo.py  geo_2.py
ros/: DroneInterface.py
scripts/: .dummy_vision_module.py.swp  .vicon_bridge.py.swo  .vicon_bridge.py.swp  CSV_Plotter.py  c3m_control_demo.py  c3m_gate_demo.py  c3m_landing_demo.py  c3m_waypoint_control.py  controller_xy.pkl  dummy_vision_module.py  gate_vision_module.py  gen_ref.py  landing_vision_module.py  landing_vision_module2.py  lem_demo_2.py  lemniscate_demo.py  lqr_control.py  mavlink_commands.txt  movetostart.py  online_visualizer.py  plot_data.py  plot_interactive.py  plot_traj.py  set_origin.py  simple_LR_move.py  simulator.py  square_traj.py  sysid_collect_data.py  sysid_dryrun.py  temp2.py  test.py  test_movement.py  testscript.py  torch2numpy.py  trajectory_1D.py  trajectory_1D_P2.py  vicon_bridge.py  vicon_frequency_test.py  vicon_grapher.py  vicon_logger.py  (+1 more)
scripts/old_plot/: plot_data_old.py  plot_traj_old.py
scripts/pickle_data/: demo_circle_V2_T4_R1_2  demo_circle_V2_T5_R1_2  demo_circle_V2_T6_R1_2  demo_circle_V3_T4_R1_2  demo_circle_V3_T5_R1_2  demo_circular_v2_T5  lem_demo_T10  lem_demo_T5  lem_demo_T6  lem_demo_T7  lem_demo_T7_2  lem_demo_T7_3  lem_demo_T7_4  lem_demo_T8  lem_demo_T9
sysid/: ExcitationGenerator.py
vision/: blob_footage_detect.py  calib_camera_extrinsic.py  calibration_cammatrix.out  calibration_distparam.out  cam2drone.py  detect_aruco.py  land_trajectory.py  picam_framerate_test.py  picam_test2.py  test.py
vision/Red_circle/: blob_detect.py
